учусь юзать гит

--- a/clf.ipynb
+++ b/clf.ipynb
@@ -64,11 +64,11 @@
    "source": [
     "import pandas as pd\n",
     "import sklearn as sk \n",
-    "#343432\n",
     "\n",
     "df = pd.read_csv('dsc_salary_2025_train.csv')\n",
     "\n",
     "df.info()\n",
+    "print('учусь юзать гит')\n",
     "\n",
     "\n"
    ]
