--- a/clf.ipynb
+++ b/clf.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "deb604be",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
     "    if X_test[feat].isnull().any():\n",
     "        mode_val = X_test[feat].mode()[0] if not X_test[feat].mode().empty else 'Unknown'\n",
     "        X_test[feat] = X_test[feat].fillna(mode_val)\n",
-    "        print(f\"в train признак '{feat}': заполнен модой {mode_val}\")"
+    "        print(f\"в test признак '{feat}': заполнен модой {mode_val}\")"
    ]
   },
   {
