--- a/clf.ipynb
+++ b/clf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "7e8c6f7b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "843688a6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "a4bb5843",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "8bcca731",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "ec8eec86",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "deb604be",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
      "output_type": "stream",
      "text": [
       "в train признак 'english_level': заполнен модой B1\n",
-      "в train признак 'english_level': заполнен модой B1\n"
+      "в test признак 'english_level': заполнен модой B1\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "ad765f6a",
    "metadata": {},
    "outputs": [
