--- a/clf.ipynb
+++ b/clf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 157,
    "id": "7e8c6f7b",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,8 @@
     "import pandas as pd\n",
     "import sklearn as sk \n",
     "import numpy as np\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
     "# Выборки уже поделены на отдельные таблицы, поэтому метод сплит не понадобится \n",
     "\n",
     "X_train = pd.read_csv('dsc_salary_2025_train.csv')\n",
@@ -20,12 +22,12 @@
     "\n",
     "X_train.drop(to_drop, axis=1, inplace=True) \n",
     "                                # удаляю именно по оси 1, то есть ненужные столбцы\n",
-    "X_test.drop(to_drop, axis=1, inplace=True)"
+    "X_test.drop(to_drop, axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 158,
    "id": "843688a6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 159,
    "id": "a4bb5843",
    "metadata": {},
    "outputs": [
@@ -122,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "8bcca731",
+   "execution_count": 160,
+   "id": "b973002e",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 161,
    "id": "ec8eec86",
    "metadata": {},
    "outputs": [
@@ -155,14 +157,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "в train признак courses_count заполнен значением 8.016914049016224\n",
-      "в test признак courses_count заполнен значением 7.953532608695652\n",
-      "в train признак gpa заполнен значением 3.527942481234107\n",
-      "в test признак gpa заполнен значением 3.508271855554688\n",
-      "в train признак communication_score заполнен значением 5.009136638874625\n",
-      "в test признак communication_score заполнен значением 4.951807290365945\n",
-      "в train признак teamworks_score заполнен значением 5.016704774286869\n",
-      "в test признак teamworks_score заполнен значением 4.983209446608549\n"
+      "признак courses_count:\n",
+      "\n",
+      "в train заполнен значением 8.016914049016224\n",
+      "в test заполнен значением 7.953532608695652\n",
+      "\n",
+      "признак gpa:\n",
+      "\n",
+      "в train заполнен значением 3.527942481234107\n",
+      "в test заполнен значением 3.508271855554688\n",
+      "\n",
+      "признак communication_score:\n",
+      "\n",
+      "в train заполнен значением 5.009136638874625\n",
+      "в test заполнен значением 4.951807290365945\n",
+      "\n",
+      "признак teamworks_score:\n",
+      "\n",
+      "в train заполнен значением 5.016704774286869\n",
+      "в test заполнен значением 4.983209446608549\n",
+      "\n"
      ]
     }
    ],
@@ -170,19 +184,20 @@
     "# Заполняю пропуски средним по каждому столбцу среди числовых признаков с пропусками\n",
     "for feat in num_feats:\n",
     "    if X_train[feat].isnull().any():\n",
+    "        print(f'признак {feat}:\\n')\n",
     "        mean = X_train[feat].mean()\n",
     "        X_train[feat] = X_train[feat].fillna(mean)\n",
-    "        print(f'в train признак {feat} заполнен значением {mean}')\n",
+    "        print(f'в train заполнен значением {mean}')\n",
     "        \n",
     "    if X_test[feat].isnull().any():\n",
     "        mean = X_test[feat].mean()\n",
     "        X_test[feat] = X_test[feat].fillna(mean)\n",
-    "        print(f'в test признак {feat} заполнен значением {mean}')"
+    "        print(f'в test заполнен значением {mean}\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 162,
    "id": "deb604be",
    "metadata": {},
    "outputs": [
@@ -190,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "в train признак 'english_level': заполнен модой B1\n",
-      "в test признак 'english_level': заполнен модой B1\n"
+      "в train признак 'english_level' заполнен модой B1\n",
+      "в test признак 'english_level' заполнен модой B1\n"
      ]
     }
    ],
@@ -201,17 +216,17 @@
     "    if X_train[feat].isnull().any():\n",
     "        mode_val = X_train[feat].mode()[0] if not X_train[feat].mode().empty else 'Unknown'\n",
     "        X_train[feat] = X_train[feat].fillna(mode_val)\n",
-    "        print(f\"в train признак '{feat}': заполнен модой {mode_val}\")\n",
+    "        print(f\"в train признак '{feat}' заполнен модой {mode_val}\")\n",
     "\n",
     "    if X_test[feat].isnull().any():\n",
     "        mode_val = X_test[feat].mode()[0] if not X_test[feat].mode().empty else 'Unknown'\n",
     "        X_test[feat] = X_test[feat].fillna(mode_val)\n",
-    "        print(f\"в test признак '{feat}': заполнен модой {mode_val}\")"
+    "        print(f\"в test признак '{feat}' заполнен модой {mode_val}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 163,
    "id": "ad765f6a",
    "metadata": {},
    "outputs": [
@@ -296,6 +311,250 @@
     "print(X_train.isnull().sum(), '\\n\\n')\n",
     "\n",
     "print(X_test.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "c0865e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Кодируем train и test отдельно\n",
+    "X_train = pd.get_dummies(X_train, columns=cat_feats, dtype=int)\n",
+    "X_test = pd.get_dummies(X_test, columns=cat_feats, dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "f8c15dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       hackathons_count  courses_count  pet_projects_count  leetcode_solved  \\\n",
+      "count      16000.000000   16000.000000        16000.000000     16000.000000   \n",
+      "mean           1.505625       8.016914            1.225625        41.625813   \n",
+      "std            1.388601       3.420440            1.338359        33.622075   \n",
+      "min            0.000000       0.000000            0.000000         0.000000   \n",
+      "25%            0.000000       6.000000            0.000000        17.000000   \n",
+      "50%            1.000000       8.000000            1.000000        34.000000   \n",
+      "75%            2.000000      10.000000            2.000000        58.000000   \n",
+      "max           10.000000      20.000000           10.000000       300.000000   \n",
+      "\n",
+      "       hours_study_per_week  months_with_mentor           gpa  \\\n",
+      "count          16000.000000        16000.000000  16000.000000   \n",
+      "mean              25.019939            4.330625      3.527942   \n",
+      "std                8.896910            3.399288      0.562046   \n",
+      "min                0.000000            0.000000      2.500000   \n",
+      "25%               19.049210            1.000000      3.134105   \n",
+      "50%               25.035401            4.000000      3.527942   \n",
+      "75%               31.022273            7.000000      3.897424   \n",
+      "max               59.130290           20.000000      5.000000   \n",
+      "\n",
+      "       communication_score  teamworks_score  motivation_score  ...  \\\n",
+      "count         16000.000000     16000.000000      16000.000000  ...   \n",
+      "mean              5.009137         5.016705          5.944876  ...   \n",
+      "std               2.256429         2.234557          2.350513  ...   \n",
+      "min               0.000000         0.000000          0.000000  ...   \n",
+      "25%               3.569818         3.612823          4.330491  ...   \n",
+      "50%               5.009137         5.016705          5.985568  ...   \n",
+      "75%               6.425402         6.428426          7.657492  ...   \n",
+      "max              10.000000        10.000000         10.000000  ...   \n",
+      "\n",
+      "       was_speaker_No  was_speaker_Yes  bot_month_No  bot_month_Yes  \\\n",
+      "count    16000.000000     16000.000000  16000.000000   16000.000000   \n",
+      "mean         0.929250         0.070750      0.898937       0.101062   \n",
+      "std          0.256415         0.256415      0.301421       0.301421   \n",
+      "min          0.000000         0.000000      0.000000       0.000000   \n",
+      "25%          1.000000         0.000000      1.000000       0.000000   \n",
+      "50%          1.000000         0.000000      1.000000       0.000000   \n",
+      "75%          1.000000         0.000000      1.000000       0.000000   \n",
+      "max          1.000000         1.000000      1.000000       1.000000   \n",
+      "\n",
+      "       attends_club_meetups_regularly_No  attends_club_meetups_regularly_Yes  \\\n",
+      "count                       16000.000000                        16000.000000   \n",
+      "mean                            0.455000                            0.545000   \n",
+      "std                             0.497986                            0.497986   \n",
+      "min                             0.000000                            0.000000   \n",
+      "25%                             0.000000                            0.000000   \n",
+      "50%                             0.000000                            1.000000   \n",
+      "75%                             1.000000                            1.000000   \n",
+      "max                             1.000000                            1.000000   \n",
+      "\n",
+      "       takes_part_in_memes_No  takes_part_in_memes_Yes  \\\n",
+      "count            16000.000000             16000.000000   \n",
+      "mean                 0.598875                 0.401125   \n",
+      "std                  0.490142                 0.490142   \n",
+      "min                  0.000000                 0.000000   \n",
+      "25%                  0.000000                 0.000000   \n",
+      "50%                  1.000000                 0.000000   \n",
+      "75%                  1.000000                 1.000000   \n",
+      "max                  1.000000                 1.000000   \n",
+      "\n",
+      "       takes_part_in_informal_meetings_No  takes_part_in_informal_meetings_Yes  \n",
+      "count                        16000.000000                         16000.000000  \n",
+      "mean                             0.503313                             0.496688  \n",
+      "std                              0.500005                             0.500005  \n",
+      "min                              0.000000                             0.000000  \n",
+      "25%                              0.000000                             0.000000  \n",
+      "50%                              1.000000                             0.000000  \n",
+      "75%                              1.000000                             1.000000  \n",
+      "max                              1.000000                             1.000000  \n",
+      "\n",
+      "[8 rows x 49 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "6ee597de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import seaborn as sns\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "# plt.figure(figsize=(12, 8))\n",
+    "# sns.boxplot(x=X_train['leetcode_solved'])\n",
+    "# plt.title('Box Plot для определения выбросов')\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cff4698",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.08\n",
+      "(0.0, np.float64(-3.0), np.float64(5.0))\n",
+      "3.21\n",
+      "(0.0, np.float64(-44.5), np.float64(119.5))\n",
+      "  Заменено 2049 значений для coffee_cups_per_day на 3.00\n",
+      "3.17\n",
+      "(0.0, np.float64(-42.5), np.float64(113.5))\n",
+      "1.14\n",
+      "(0.0, np.float64(-4.5), np.float64(15.5))\n",
+      "0.0\n",
+      "0.88\n",
+      "0.92\n",
+      "0.0\n",
+      "0.74\n",
+      "0.04\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.42\n",
+      "0.4\n",
+      "0.0\n",
+      "0.0\n",
+      "0.59\n",
+      "0.81\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# теперь устраняю выбросы\n",
+    "\n",
+    "\n",
+    "# определяю функцию межквартильного разамаха для всех числовых признаков\n",
+    "def igr(num_feat:str):\n",
+    "    Q1 = X_train[num_feat].quantile(0.25) # расчет 25-го процентиля в столбце, при этом сначала столбец монотонно упорядочивается на время расчета\n",
+    "    Q3 = X_train[num_feat].quantile(0.75)\n",
+    "\n",
+    "    IQR = Q3 - Q1 # размах\n",
+    "\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    # print(f\"Признак {num_feat}\")\n",
+    "    # print(f\"Нижняя граница для {num_feat}: {lower_bound:.2f}\")\n",
+    "    # print(f\"Верхняя граница для {num_feat}: {upper_bound:.2f}\")\n",
+    "    \n",
+    "    outliers_lower = X_train[X_train[num_feat] < lower_bound]\n",
+    "    count_lower = len(outliers_lower)\n",
+    "    \n",
+    "    outliers_upper = X_train[X_train[num_feat] > upper_bound]\n",
+    "    count_upper = len(outliers_upper)\n",
+    "    \n",
+    "    total_outliers = count_lower + count_upper\n",
+    "    \n",
+    "    # print(f\"\\nКоличество выбросов снизу: {count_lower}\")\n",
+    "    # print(f\"Количество выбросов сверху: {count_upper}\")\n",
+    "    # print(f\"Общее количество выбросов: {total_outliers} для {num_feat}\")\n",
+    "    # print(f\"Процент выбросов от общего числа для {num_feat}: {(total_outliers / len(X_train) * 100):.2f}%\\n\\n\\n\")\n",
+    "\n",
+    "    return round(total_outliers / len(X_train) * 100, 2), lower_bound, upper_bound\n",
+    "\n",
+    "for feat in num_feats:\n",
+    "    outliers, lower, upper = igr(feat) # outliers -- процент выбросов для признака\n",
+    "    \n",
+    "    if outliers < 1:\n",
+    "        continue\n",
+    "    \n",
+    "    if 1 <= outliers < 5: \n",
+    "        X_train[feat] = X_train[feat].clip(lower, upper) # замена на min или max допустимое значение\n",
+    "        # print(outliers)\n",
+    "        replaced_outliers = igr(feat)\n",
+    "        # print(replaced_outliers)\n",
+    "\n",
+    "    elif 5 <= outliers < 15:\n",
+    "        median_val = X_train[feat].median() \n",
+    "        \n",
+    "        outlier_mask = (X_train[feat] < lower) | (X_train[feat] > upper)\n",
+    "\n",
+    "        X_train.loc[outlier_mask, feat] = median_val\n",
+    "        # print(f\"  Заменено {outlier_mask.sum()} значений для {feat} на {median_val:.2f}\")\n",
+    "    \n",
+    "# for feat in num_feats:\n",
+    "#     outliers, lower, upper = igr(feat)\n",
+    "#     print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "66a7eb47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SVC()\n",
+    "\n",
+    "model.fit(X_train, y) # обучаю моделью опорных векторов \n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "test_original = pd.read_csv('dsc_salary_2025_test.csv')\n",
+    "ids = test_original['id']\n",
+    "\n",
+    "results = pd.DataFrame({\n",
+    "    'id': ids,\n",
+    "    'pred_value': y_pred\n",
+    "})\n",
+    "\n",
+    "results.to_csv('predicted_test.csv', index=False)"
    ]
   }
  ],
